--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -33,5 +33,6 @@
     "next-transpile-modules": "^10.0.1",
     "tree-kill": "^1.2.2",
     "vitest": "^2.1.1"
-  }
+  },
+  "packageManager": "yarn@4.5.0"
 }
